2009-01-04 David Moore  <dcm@acm.org>
	* SVN 579: Don't let configure fail if libusb-1.0 is not present

2009-01-02 David Moore  <dcm@acm.org>
	* SVN 578: Add the "usb" platform, for support of devices that do
	           IIDC-over-USB such as the Point Grey Chameleon and
	           Firefly MV cameras.  Support will be automatically
	           enabled if libusb 1.0 is found at configure-time.

2008-12-30 David Moore  <dcm@acm.org>
	* SVN 577: Juju: Retry busy transactions

2008-12-23 David Moore  <dcm@acm.org>
	* SVN 576: Fix Mac OS build.
	* SVN 575: Improve Mac OS error message when iso bandwidth is depleted.
	* SVN 574: Fix Mac OS build.
	* SVN 573: Package a local copy of the juju headers so there are no
	           versioning problems with different Linux configurations.
	* SVN 572: Choose platform at run-time, not compile-time.  This
	           eliminates the --with-juju-dir configure option.
	* SVN 571: Add more error-checking to example programs

2008-12-12 David Moore  <dcm@acm.org>
	* SVN 570: Update NEWS
	* SVN 569: Update version and AUTHORS for 2.0.3.  RELEASE 2.0.3.

2008-12-05 David Moore  <dcm@acm.org>
	* SVN 568: Added AC_CANONICAL_SYSTEM to configure.in.  Thanks to
	           Tully Foote.
	* SVN 567: Fix acinclude.m4 for newer versions of autoconf
	* SVN 566: Fix image size bug in dc1394_deinterlace_stereo_frames.
	           Thanks to Maya Cakmak and Jeremy Leibs.

2008-08-28 David Moore  <dcm@acm.org>
	* SVN 565: Potential crash fix for Mac OS 10.4.  Thanks to Salvatore
	           Desiano for tracking it down.

2008-08-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 564: last set of blind changes.

2008-08-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 563: more blind fixes for the MSW port. 

2008-08-21 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 562: attempt to fix incoherences in the msw port, part 2. There
	           is still a lot of work to be done in camera detection and