@@ -1,4 +1,6 @@
 2009-01-04 David Moore  <dcm@acm.org>
+	* SVN 580: Include pkgconfig macros in acinclude.m4 for the benefit
+	           of SVN users that don't have pkgconfig installed.
 	* SVN 579: Don't let configure fail if libusb-1.0 is not present
 
 2009-01-02 David Moore  <dcm@acm.org>
